refactor(Route): getAllPointsOnRoute가 파라미터 원본 값을 final 하게 관리하도록 수정